[gd_scene load_steps=2 format=2]

[ext_resource path="res://world/Camera2D.gd" type="Script" id=1]

[node name="Camera2D" type="Camera2D"]
current = true
script = ExtResource( 1 )

[node name="ShakeTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
